syntax = "proto3";

option go_package = "./;protos";

enum UserType {
  USER_TYPE_UNSPECIFIED = 0;
  USER_TYPE_ADMIN = 1;
  USER_TYPE_PORTAL = 2;
}

message UserSearchRequest {
  string username = 1;
}

message UserInfo{
  string username = 1;
  string password = 2;
  UserType type = 3;
  repeated string roles = 4;
}

message UserSearchResponse{
  int32 code = 1;
  string message = 2;
  UserInfo userInfo = 3;
}


service UserService {
  rpc Search(UserSearchRequest) returns (UserSearchResponse){}
}